2.0.0-alpha08
- New: Purchase actions on shopping list page are working again (#401)
- New: It is now possible to purchase only done shopping list items (#221)
- Improved: 'Add shopping list item' page now has a better workflow
- Improved: Quick mode behavior now is better for amount field of forms
- Improved: Now you can add inventory and transfer page as shortcuts
- Improved: Display a warning if stock feature is disabled (#139)
- Improved: Actions in product overview bottom sheet are more reachable
- Improved: Few design tweaks on product overview sheet and in shopping mode
- Improved: Hide quantity unit field on shopping list item page if there is only one
- Improved: Add toggle in settings to reduce app startup time (disables logo animation)
- Improved: Updated translations
- Fixed: Menus were not displayed after first app start (#365)
- Fixed: Inactive products now cannot be added to shopping list (#398)
- Fixed: Swipe items wasn't possible after going back to shopping list or stock
- Fixed: Due date was always mandatory on inventory page (#400)
- Fixed: White icons on white navigation bar with SDK 23-25 (#366)
- Fixed: Plurals in languages with multiple plurals are displayed correctly (#348)
- Fixed: Show opened aggregated amount in stock overview if necessary

2.0.0-alpha07
- New: Transfer page and inventory page (finally!) (#385 and #115)
- New: We use Conscrypt now to support TLS1.3 on older Android versions (#163)
- New: You can now duplicate products (#146)
- Improved: List sorting uses rules of currently selected language (#371)
- Improved: You can now open purchase or consume page from stock for one product
- Improved: Long-tap on shopping list card on start page to open shopping mode
- Improved: Shopping list item edit page now has the camera scanner frame
- Improved: Up and down page animations
- Improved: Focus product field after unknown barcode was scanned
- Improved: Amount field in forms has a clear button which also opens keyboard