@@ -154,7 +154,7 @@ public class InventoryFragment extends BaseFragment implements
       int productId = Integer.parseInt(args.getProductId());
       setArguments(new InventoryFragmentArgs.Builder(args)
           .setProductId(null).build().toBundle());
-      viewModel.setProduct(productId);
+      viewModel.setQueueEmptyAction(() -> viewModel.setProduct(productId));
     }
 
     viewModel.getFormData().getScannerVisibilityLive().observe(getViewLifecycleOwner(), visible -> {
