@@ -153,7 +153,7 @@ public class TransferFragment extends BaseFragment implements
       int productId = Integer.parseInt(args.getProductId());
       setArguments(new TransferFragmentArgs.Builder(args)
           .setProductId(null).build().toBundle());
-      viewModel.setProduct(productId, null);
+      viewModel.setQueueEmptyAction(() -> viewModel.setProduct(productId, null));
     }
 
     viewModel.getFormData().getScannerVisibilityLive().observe(getViewLifecycleOwner(), visible -> {
