@@ -25,7 +25,6 @@
   <item
     android:id="@+id/action_delete"
     android:title="@string/action_delete"
-    android:visible="false"
     android:icon="@drawable/ic_round_delete_anim_menu"
     app:showAsAction="always"
     tools:ignore="AlwaysShowAction" />
