@@ -21,7 +21,7 @@
 
   <string name="deep_link_stockOverviewFragment" translatable="false">grocy://stockOverviewFragment</string>
   <string name="deep_link_shoppingListFragment" translatable="false">grocy://shoppingListFragment</string>
-  <string name="deep_link_shoppingListItemEditFragment" translatable="false">grocy://shoppingListItemEditFragment?action={action}</string>
+  <string name="deep_link_shoppingListItemEditFragment" translatable="false">grocy://shoppingListItemEditFragment?action={action}&amp;productId={productId}</string>
   <string name="deep_link_shoppingModeFragment" translatable="false">grocy://shoppingModeFragment</string>
   <string name="deep_link_purchaseFragment" translatable="false">grocy://purchaseFragment</string>
   <string name="deep_link_consumeFragment" translatable="false">grocy://consumeFragment</string>
