@@ -1,6 +1,7 @@
 2.0.0-alpha08
-- New: Purchase actions on shopping list page are working again (#401)
+- New: 'Purchase' actions on shopping list page are working again (#401)
 - New: It is now possible to purchase only done shopping list items (#221)
+- New: 'Add to shopping list' action on stock overview page is working again
 - Improved: 'Add shopping list item' page now has a better workflow
 - Improved: Quick mode behavior now is better for amount field of forms
 - Improved: Now you can add inventory and transfer page as shortcuts
